--- a/PowerOptima/PowerOptima-frontend/src/components/chart/chart.scss
+++ b/PowerOptima/PowerOptima-frontend/src/components/chart/chart.scss
@@ -3,15 +3,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: center; /* Center both horizontally and vertically */
-  -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
-  box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+  -webkit-box-shadow: 2px 4px 10px 1px rgba(15, 13, 13, 0.47);
+  box-shadow: 2px 4px 10px 1px rgba(19, 226, 67, 0.47);
   padding: 10px;
-  color: gray;
+  color: rgb(25, 207, 34);
   width: 60%;
   border-radius: 20px;
 margin-top: 30px;
 margin-left: 280px;
-background-color: antiquewhite;
+background-color: rgb(241, 241, 241);
   .title {
     margin-bottom: 20px;
   }
